# wasmcon-workshop-2023-09

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  netcat_config_message.txt  requirements.txt  wasmcon-provision.ipynb  wasmcon-vision_app.ipynb  wasmcon-visionapp.ipynb  wasmcon-workshop.ipynb
.devcontainer/: Dockerfile  devcontainer.json  downloadlldb.sh  entrypoint.sh
configurator/: commands.sh  configurator.py  configurator.service  deploy-to-all.sh  workshop-setup.md
mocks/api/: README.md  setup.cfg
mocks/api/src/node/: api.py
mocks/evp_mock/: setup.cfg
mocks/senscord_mock/: README.md  setup.cfg
mocks/wasi_nn/: setup.cfg
samples/detection/: Makefile  README.md  deployment.json
samples/detection-single/: Makefile  README.md  deployment.json
samples/detection-single/node/: Makefile  config.h  draw_bbox.c  draw_bbox.h  main.c  nn.c  nn.h  parson.c  parson.h  senscord_wasm.h  sensor.c  sensor.h
samples/detection/draw_bboxes/: Makefile  detection_utils.cpp  detection_utils.hpp  main.c
samples/detection/inference_wasi_nn/: Makefile  main.c  output_tensor_utils.cpp  output_tensor_utils.hpp
samples/detection/ppl_detection_ssd/: Makefile  main.c  ppl_detection_ssd.cpp  ppl_public.h
samples/detection/senscord_sink/: Makefile  main.c
samples/detection/senscord_source/: Makefile  main.c
samples/sdk/: rules.mk
samples/sdk/include/: logger.h  output_tensor_generated.h  postprocessed_detection_generated.h  user_bridge_c.h  wasi_nn_types.h
samples/source-sink/: Makefile  deployment.json
samples/source-sink/sink/: main.c
(+26 files in other folders)
