[metadata]
name = node-api
version = 0.0.3
url = https://github.com/midokura/node-devkit
author = Midokura
author_email = engineering@midokura.com
classifiers =
    License :: Sony Semiconductor Solutions Corporation
    Operating System :: OS Independent
description = Entrypoint for the Sensing Pipeline Service
license_files = LICENSE

[options]
python_requires = >=3.8
package_dir=
    =src
packages=find:
install_requires =
    wamr-python
    numpy==1.24.2

[options.packages.find]
where=src
