[metadata]
name = wasi-nn
version = 0.0.3
url = https://github.com/midokura/node-devkit
author = Midokura
author_email = engineering@midokura.com
classifiers =
    License :: Sony Semiconductor Solutions Corporation
    Operating System :: OS Independent
description = Entrypoint for the Sensing Pipeline Service
license_files = LICENSE

[options]
python_requires = >=3.9
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
